[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learn-agent-ai"
version = "0.1.0"
description = "AI-powered adaptive learning agent with spaced repetition (SM-2)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Learn Agent", email = "learn@example.com" },
]
keywords = ["anthropic", "claude", "flashcards", "spaced-repetition", "learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
learn-agent = "learn_agent.cli:main"

[project.urls]
Homepage = "https://github.com/example/learn-agent-ai"
Issues = "https://github.com/example/learn-agent-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["learn_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
